# mmpviz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_pypi.md  SKILL.md  pyproject.toml
docs/: auto-layout-algorithm.md
examples/: dark_theme.json  light_theme.json  regenerate.py
examples/break/: diagram.json  theme.json
examples/chips/: compare_layouts.html
examples/chips/arm_coresight_dual_view/: diagram.json  notes.md
examples/chips/arm_coresight_line_link/: diagram.json  theme.json
examples/chips/caliptra/: diagram.json  layout.md  notes.md  theme.json
examples/chips/opentitan_earlgrey/: diagram.json  notes.md  theme.json
examples/chips/pulpissimo/: diagram.json  notes.md  theme.json
examples/chips/riscv64_virt/: diagram.json
examples/chips/stm32f103/: diagram.json  notes.md  theme.json
examples/height/global_theme/: theme.json
examples/labels/: diagram.json  theme.json
examples/layout/algo2_deep_chain/: diagram.json
examples/layout/algo2_pass2_cascade/: diagram.json
examples/layout/algo2_tall_bot/: diagram.json
examples/layout/algo2_tall_mid/: diagram.json
examples/layout/algo2_tall_top/: diagram.json
examples/layout/algo3_long_span/: diagram.json
examples/layout/column_order/: diagram.json  theme.json
examples/layout/height_global/: diagram.json  theme.json
examples/layout/height_override/: diagram.json
examples/link/: diagram.json  theme.json
examples/link/anchor_addr_range/: diagram.json
examples/link/anchor_cross_addr/: diagram.json
examples/link/anchor_to_section/: diagram.json
examples/link/band_fill/: diagram.json  theme.json
examples/stack/: diagram.json  theme.json
examples/stm32f103/: diagram.json  theme.json
references/: apply-theme.md  auto-layout-algorithm.md  auto-layout-proposal.md  check-rules.md  create-diagram.md  diagram-schema.md  layout-guide.md  llm-guide.md  theme-schema.md
schemas/: diagram.schema.json  theme.schema.json
scripts/: area_view.py  auto_layout.py  bump_version.py  check.py  fmt_diagram.py  helpers.py  labels.py  links.py  loader.py  logger.py  mmpviz.py  render_auto_layout.py  renderer.py  section.py  sections.py  svg_builder.py  theme.py
scripts/schemas/: diagram.schema.json  theme.schema.json
scripts/themes/: default.json  plantuml.json
tests/: __init__.py  conftest.py  test_area_view.py  test_auto_layout.py  test_embedded_theme.py  test_golden.py  test_loader.py  test_pipeline.py  test_renderer.py  test_section.py  test_sections.py  test_svg_builder.py  test_theme.py  test_validation.py
tests/fixtures/: palette_theme.json  sample_diagram.json  sample_theme.json
themes/: default.json  light.json  monochrome.json  plantuml.json
(+47 files in other folders)
